--- a/MockExam/mockexam-app/src/main/webapp/WEB-INF/web.xml
+++ b/MockExam/mockexam-app/src/main/webapp/WEB-INF/web.xml
@@ -1,115 +1,171 @@
-<?xml version="1.0"?>
-<web-app>
-	<welcome-file>index.jsp</welcome-file>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
+	license agreements. See the NOTICE file distributed with this work for additional 
+	information regarding copyright ownership. The ASF licenses this file to 
+	You under the Apache License, Version 2.0 (the "License"); you may not use 
+	this file except in compliance with the License. You may obtain a copy of 
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+	by applicable law or agreed to in writing, software distributed under the 
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+	OF ANY KIND, either express or implied. See the License for the specific 
+	language governing permissions and limitations under the License. -->
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                      http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+	version="4.0" metadata-complete="true">
+
+	<diplay-name>Mock exam</diplay-name>
+
+	<request-character-encoding>UTF-8</request-character-encoding>
+
 	<servlet>
 		<servlet-name>read</servlet-name>
 		<servlet-class>com.mockexam.servlet.ReadServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>read</servlet-name>
-		<url-pattern>/readExamData</url-pattern>
-	</servlet-mapping>
-	
 	<servlet>
 		<servlet-name>Answer</servlet-name>
 		<servlet-class>com.mockexam.servlet.GetAnswerServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>Answer</servlet-name>
-		<url-pattern>/getAnswer</url-pattern>
-	</servlet-mapping>
-	
 	<servlet>
 		<servlet-name>AddQuestion</servlet-name>
 		<servlet-class>com.mockexam.servlet.AddQuestionServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>AddQuestion</servlet-name>
-		<url-pattern>/addExamData</url-pattern>
-	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>Controller</servlet-name>
 		<servlet-class>com.mockexam.servlet.ExamControllerServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>Controller</servlet-name>
-		<url-pattern>/examController</url-pattern>
-	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>Result</servlet-name>
 		<servlet-class>com.mockexam.servlet.ResultServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>Result</servlet-name>
-		<url-pattern>/viewResult</url-pattern>
-	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>login</servlet-name>
 		<servlet-class>com.mockexam.servlet.LoginValidateServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>login</servlet-name>
-		<url-pattern>/userLogin</url-pattern>
-	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>Registration</servlet-name>
 		<servlet-class>com.mockexam.servlet.RegisterUserServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>Registration</servlet-name>
-		<url-pattern>/userRegistration</url-pattern>
-	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>SearchQuestion</servlet-name>
 		<servlet-class>com.mockexam.servlet.SearchQuestionServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>SearchQuestion</servlet-name>
-		<url-pattern>/searchQuestion</url-pattern>
-	</servlet-mapping>
+
 	<servlet>
 		<servlet-name>UpdateQuestion</servlet-name>
 		<servlet-class>com.mockexam.servlet.UpdateQuestionServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
-		<servlet-name>UpdateQuestion</servlet-name>
-		<url-pattern>/updateQuestion</url-pattern>
-	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>DeleteQuestion</servlet-name>
 		<servlet-class>com.mockexam.servlet.DeleteQuestionServlet</servlet-class>
 	</servlet>
+
+	<!-- Define the Mock exam Servlet Mapping -->
+	<servlet-mapping>
+		<servlet-name>read</servlet-name>
+		<url-pattern>/readExamData</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Answer</servlet-name>
+		<url-pattern>/getAnswer</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AddQuestion</servlet-name>
+		<url-pattern>/addExamData</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Controller</servlet-name>
+		<url-pattern>/examController</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Result</servlet-name>
+		<url-pattern>/viewResult</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/userLogin</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Registration</servlet-name>
+		<url-pattern>/userRegistration</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SearchQuestion</servlet-name>
+		<url-pattern>/searchQuestion</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UpdateQuestion</servlet-name>
+		<url-pattern>/updateQuestion</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>DeleteQuestion</servlet-name>
 		<url-pattern>/deleteQuestion</url-pattern>
 	</servlet-mapping>
 
-	<diplay-name>FormBasedAuthentication</diplay-name>
+
+	<!-- Define a Security Constraint on this Application -->
+	<!-- NOTE: None of these roles are present in the default users file -->
 	<security-constraint>
 		<web-resource-collection>
-			<web-resource-name>mockexam</web-resource-name>
-			<url-pattern>/userLogin</url-pattern>
+			<web-resource-name>Mock exam admin access</web-resource-name>
+			<url-pattern>/userLogin/*</url-pattern>
+			<!--<url-pattern>/security/*</url-pattern> -->
 		</web-resource-collection>
-		<auth-contraint>
+		<auth-constraint>
 			<role-name>admin</role-name>
-			<role-name>user</role-name>
-		</auth-contraint>
+		</auth-constraint>
 	</security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Mock exam user access</web-resource-name>
+			<url-pattern>/readExamData/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>user</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<!-- Define the Login Configuration for this Application -->
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<!--<realm-name>Mock exam Application</realm-name> -->
+		<form-login-config>
+			<form-login-page>/login.jsp</form-login-page>
+			<form-error-page>/errorLogin.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
+
+	<!-- Security roles referenced by this web application -->
 	<security-role>
+		<description>
+				The role that is required to access admin pages and functions
+			</description>
 		<role-name>admin</role-name>
+	</security-role>
+	<security-role>
+		<description>
+				The role that is required to access Exams
+			</description>
 		<role-name>user</role-name>
 	</security-role>
-	<login-config>
-      <auth-method>FORM</auth-method>
-      <form-login-config>
-         <form-login-page>/login.jsp</form-login-page>
-         <form-error-page>/errorLogin.jsp</form-error-page>
-      </form-login-config>
-   </login-config>  
+
+	<error-page>
+		<error-code>401</error-code>
+		<location>/WEB-INF/jsp/401.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/WEB-INF/jsp/403.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/jsp/404.jsp</location>
+	</error-page>
+
 </web-app>
