--- a/Hackathon/Covid19AffidavitRequester/Covid19/src/main/webapp/WEB-INF/web.xml
+++ b/Hackathon/Covid19AffidavitRequester/Covid19/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,34 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
+   <security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Covid19</web-resource-name>
+			<url-pattern>/logining</url-pattern>
+			<http-method>POST</http-method>
+			<http-method>GET</http-method>
+		</web-resource-collection>
+
+
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+  </security-constraint>
+
+
+	<security-role>
+		<role-name>admin</role-name>
+	</security-role>
+
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/login.jsp</form-login-page>
+			<form-error-page>/login_failure.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
+
+
    <servlet>
 		<servlet-name>Add</servlet-name>
 		<servlet-class>com.ashik.servlet.AddServlet</servlet-class>
@@ -21,6 +49,15 @@
 	<servlet-mapping>
 		<servlet-name>check</servlet-name>
 		<url-pattern>/requestCheck</url-pattern>
+	</servlet-mapping>
+
+ <servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>com.ashik.servlet.loginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/logining</url-pattern>
 	</servlet-mapping>
 
 </web-app>
