--- a/Hackathon/Covid19AffidavitRequester/src/main/webapp/WEB-INF/web.xml
+++ b/Hackathon/Covid19AffidavitRequester/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,16 @@
 <servlet-name>viewservlet</servlet-name>  
 <url-pattern>/ViewServlet</url-pattern>  
 </servlet-mapping>
+<servlet> 
+
+<servlet-name>adduser</servlet-name>  
+<servlet-class>com.amritha.control.AddUser</servlet-class>  
+</servlet>  
+  
+<servlet-mapping>  
+<servlet-name>adduser</servlet-name>  
+<url-pattern>/AddUser</url-pattern>  
+</servlet-mapping>
 
 </web-app>
 
